[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/MainMenu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/mm_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/sfx/mainmenu.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Font/main_menu.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]

[node name="mainmenu" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="ColorRect" parent="CanvasLayer"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.901961, 0.72549, 0.568627, 1 )

[node name="Title" type="Label" parent="CanvasLayer"]
margin_left = 311.0
margin_top = 67.0
margin_right = 981.0
margin_bottom = 209.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "PLACEHOLDER TITLE"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_left = 489.0
margin_top = 317.0
margin_right = 833.0
margin_bottom = 529.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 344.0
margin_bottom = 50.0
focus_neighbour_top = NodePath("../Exit")
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Start"
icon_align = 1

[node name="Options" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 54.0
margin_right = 344.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
icon_align = 1

[node name="Credits" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 108.0
margin_right = 344.0
margin_bottom = 158.0
custom_fonts/font = ExtResource( 2 )
text = "Credits"
icon_align = 1

[node name="Exit" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 162.0
margin_right = 344.0
margin_bottom = 212.0
focus_neighbour_bottom = NodePath("../Start")
custom_fonts/font = ExtResource( 2 )
text = "Exit"
icon_align = 1

[node name="mainmenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Music"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
